# ColbyCollege_CS252

./: .gitignore  .pylintrc  CLAUDE.md  test.ipynb
Lab01/: csv_reader.py  dictionary_practice.py
Labs/Lab02a/: Lab2a.ipynb
Labs/Lab02b/: Lab2b.ipynb
Labs/Lab02c/: Lab2c.ipynb
Labs/Lab03/: Lab3.ipynb
Labs/Lab03b/: Lab3b.ipynb
Labs/Lab04a/: Lab4a.ipynb
Labs/Lab04b/: Lab04b.ipynb
Labs/Lab04c/: Lab4c.ipynb
Labs/Lab05/: Lab5_252.ipynb
Labs/lab1b/: Lab1b_copy.ipynb
Projct3/: image_segmentation.ipynb  kmeans.ipynb  kmeans.py
Projct3/assets/: cluster2.csv  cluster5.csv
Project02/: lab2.py  main.py  shapelib.py  test.py
Project1/: analysis.ipynb  analysis.py  data.py  test01_read_numeric_data.py  test02_read_data_errors.py  test03_read_cat_data.py  test04_read_missing_data.py  test05__str__.py  test06_get.py
Project1/data/: OldFaithful.csv
Project1/qzhang27_Project1_extension/: README.MD
Project2/: data.py  linear_regression.ipynb  linear_regression.py  qr_solver.ipynb
Project2/data/: wave_fit.csv
Project3/: image_segmentation.ipynb  kmeans.ipynb  kmeans.py
Project4/: data_transformations.ipynb  data_transformations.py  eigenfaces.ipynb  pca.ipynb  pca.py  pca_analysis.ipynb
Project5/: movie_recommender.ipynb  rec_sys.py  rec_util.py
Project5/Extension/funk_svd/: Cargo.toml  pyproject.toml
Project5/Extension/funk_svd/.cargo/: config.toml
Project5/Extension/funk_svd/src/: lib.rs
lab1b/: Lab1b.ipynb
qzhang27_Project1_extension/: README.MD
qzhang27_Project2/: linear_regression.py  polynomial_regression.ipynb
(+9 files in other folders)
